Revert "fix(styles): .naturalList having weird spacing on Safari"
This reverts commit 83570b5237f126e17b9b79a0f3fe42a375a8cef0.

--- a/assets/pages/index/page.css
+++ b/assets/pages/index/page.css
@@ -247,7 +247,7 @@ ul {
   }
 
   ul.naturalList li {
-    display: inline;
+    display: inline-block;
   }
 
   ul.naturalList li:not(:last-child):after {
